--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pomodoro-clock",
+  "name": "pomodoro-clock-responsive-with-visual",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
